[gd_scene load_steps=17 format=3 uid="uid://c0p1gp1m0ehxd"]

[ext_resource type="Script" uid="uid://bor0vn4cccx01" path="res://UI/level_select_menu.gd" id="1_3jria"]
[ext_resource type="Texture2D" uid="uid://bbgwpoiadoloa" path="res://Pixel Adventure 1/Free/Background/background.png" id="2_3jria"]
[ext_resource type="Texture2D" uid="uid://bhkfvxjeljbuj" path="res://UI/icons/level_1.png" id="3_level1"]
[ext_resource type="Texture2D" uid="uid://dsrlb4g7etjxi" path="res://UI/icons/level_2.png" id="4_level2"]
[ext_resource type="Texture2D" uid="uid://cd0t38rct5u71" path="res://UI/icons/level_3.png" id="5_level3"]
[ext_resource type="Texture2D" uid="uid://c2t5slt16u4ym" path="res://UI/icons/level_4.png" id="6_level4"]
[ext_resource type="Texture2D" uid="uid://btqajfj5ulywe" path="res://UI/icons/level_5.png" id="7_level5"]
[ext_resource type="Texture2D" uid="uid://bucs1rf26h2ph" path="res://UI/icons/level_6.png" id="8_level6"]
[ext_resource type="Texture2D" uid="uid://ctm283kevjo5i" path="res://UI/icons/level_7.png" id="9_level7"]
[ext_resource type="Texture2D" uid="uid://bbnxga8fskrif" path="res://UI/icons/level_8.png" id="10_level8"]
[ext_resource type="Texture2D" uid="uid://p2x3gydjwmr8" path="res://UI/icons/level_9.png" id="11_level9"]
[ext_resource type="Texture2D" uid="uid://dw3tbebw48l4e" path="res://UI/icons/level_10.png" id="12_level10"]
[ext_resource type="Texture2D" uid="uid://bvmv30isvhk2y" path="res://Pixel Adventure 1/Free/Menu/Buttons/Back.png" id="13_6bwxn"]
[ext_resource type="Texture2D" uid="uid://l8gwdmxtel2c" path="res://Pixel Adventure 1/Free/Menu/Buttons/Restart.png" id="14_euyfw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jria"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07jyw"]

[node name="LevelSelectMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 3.0
offset_right = 2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3jria")
max_levels = 35
page_button_scale = Vector2(2.5, 2.5)
page_spacing = 50.0
label_style = 3
arrow_size = 100.0
arrow_spacing = 50.0

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -9.0
offset_right = 176.0
offset_bottom = 367.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3jria")
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -386.0
offset_top = -250.0
offset_right = 410.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_outline_color = Color(1, 0.935287, 0.974431, 1)
theme_override_font_sizes/font_size = 48
text = "SELECT LEVEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PageContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(690, 300)
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="Level1Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(78, 48)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("3_level1")

[node name="Level2Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(214, 48)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("4_level2")

[node name="Level3Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(365, 47)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("5_level3")

[node name="Level4Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(514, 46)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("6_level4")

[node name="Level5Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(671, 44)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("7_level5")

[node name="Level6Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(80, 175)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("8_level6")

[node name="Level7Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(215, 177)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("9_level7")

[node name="Level8Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(362, 177)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("10_level8")

[node name="Level9Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(515, 174)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("11_level9")

[node name="Level10Button" type="TouchScreenButton" parent="VBoxContainer/GridContainer"]
position = Vector2(678, 175)
scale = Vector2(5, 5.08)
texture_normal = ExtResource("12_level10")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="VBoxContainer/HBoxContainer/BackButton"]
position = Vector2(-137, -325)
rotation = 6.27428
scale = Vector2(6.87287, -5.50759)
texture_normal = ExtResource("13_6bwxn")
shape = SubResource("RectangleShape2D_3jria")

[node name="ResetButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="VBoxContainer/HBoxContainer/ResetButton"]
position = Vector2(-142, -276)
scale = Vector2(4.74128, 4.04545)
texture_normal = ExtResource("14_euyfw")
shape = SubResource("RectangleShape2D_07jyw")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton/TouchScreenButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ResetButton/TouchScreenButton" to="." method="_on_reset_pressed"]
